feat(cluster): 重构集群配置加载逻辑并新增ID生成器和指标收集器
- 引入SimpleYamlConfigLoader替代手动YAML解析
- 添加requireNonBlank方法增强参数校验
- 实现fromProperties方法统一配置加载流程
- 新增ID生成器支持Intent ID、事件ID和幂等键生成
- 添加MetricsCollector收集操作指标、延迟指标和运行时指标
- 实现精度档位指标注册表支持按档位统计
- 优化环境变量配置解析和验证逻辑
- 增强节点配置验证包括重复shardId和索引范围检查
- 添加背压事件统计和P95/P99/P99.9延迟计算功能